# veribot

./: .gitignore  Cargo.toml  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  RUN_THIS.sh  START_HERE.md  TEST.sh  USAGE_GUIDE.md  justfile  test.sh
attestation-core/: Cargo.toml
attestation-core/src/: attestation.rs  checkpoint.rs  crypto.rs  lib.rs  merkle.rs  serialization.rs  types.rs
attestation-sgx/: Cargo.toml
attestation-sgx/src/: dcap.rs  lib.rs  pck.rs  quote.rs
demo/: DEMO.sh  index.html
docs/: THREAT_MODEL.md
examples/: create_checkpoint.rs
scripts/: verify-build.sh
smart-contracts/: .env.example  foundry.toml
smart-contracts/contracts/: RobotAttestationRegistry.sol
smart-contracts/script/: Deploy.s.sol
smart-contracts/test/: RobotAttestationRegistry.t.sol
