[package]
name = "attestation-sgx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
attestation-core = { path = "../attestation-core" }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Cryptography
sha2 = { workspace = true }
x509-parser = "0.16"
der-parser = "9.0"
base64 = "0.21"

# Async
async-trait = "0.1"
tokio = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
hex = "0.4"
